--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "html-tailwind",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"pnpm run build\" \"pnpm run serve\" \"pnpm run sync\"",
+    "dev": "npm-run-all --parallel build serve sync",
     "serve": "nodemon main.mjs",
     "sync": "browser-sync start --config bs-config.js",
     "build": "tailwindcss -i ./src/styles.css -o ./src/output.css --watch"
@@ -17,6 +17,7 @@
     "browser-sync": "^3.0.2",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.4",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.41",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.7"
